--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="./style.css">
      <title>Document</title>
 </head>
 <body>
      <div>
           <h1>Meraj Hossain Samir</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officiis quasi eligendi. Molestiae perspiciatis consequuntur sint reiciendis, voluptatum nihil quis labore doloremque necessitatibus porro voluptate fugiat, dolorum quaerat tempore esse soluta sapiente nobis quasi nulla rerum veritatis in iusto distinctio. Autem labore distinctio omnis a alias molestiae dignissimos saepe unde.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officiis quasi eligendi. Molestiae perspiciatis consequuntur sint reiciendis, voluptatum nihil quis labore doloremque necessitatibus porro voluptate fugiat, dolorum quaerat tempore esse soluta sapiente nobis quasi nulla rerum veritatis in iusto distinctio. Autem labore distinctio omnis a alias molestiae dignissimos saepe unde. molestiae dignissimos saepe unde  molestiae dignissimos saepe undea</p>
      </div>
 </body>
 </html>
